Started working on gradle migration